--- a/Prevu.Synoptics.V6389_Forever_Plast/OverallView.xaml
+++ b/Prevu.Synoptics.V6389_Forever_Plast/OverallView.xaml
@@ -12,12 +12,12 @@
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" 
               d:Background="{DynamicResource MaterialDesignPaper}"  >
-    <Canvas Width="3951" Height="1299">
-        <local:P330 Canvas.Left="10" Canvas.Top="10"/>
-        <local:P460 Canvas.Left="1246" Canvas.Top="404" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <local:P530 Canvas.Left="2338" Canvas.Top="318" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+  <Canvas Width="3589" Height="1299">
+    <local:P330 Canvas.Left="40" Canvas.Top="45" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <local:P460 Canvas.Left="1258" Canvas.Top="412" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <local:P530 Canvas.Left="2256" Canvas.Top="256" HorizontalAlignment="Left" VerticalAlignment="Center" Width="1270"/>
 
 
 
-    </Canvas>
+  </Canvas>
 </UserControl>
