--- a/Prevu.Synoptics.V6389_Forever_Plast/Pages/P530.xaml
+++ b/Prevu.Synoptics.V6389_Forever_Plast/Pages/P530.xaml
@@ -8,98 +8,107 @@
              xmlns:Misc="clr-namespace:Prevu.Drawings.Machines.Misc;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P530" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas>
-        <Labels:Pipe StatusComponent="534-01-MA1" RenderTransformOrigin="0.55,0.5" Width="121" Color="Air" Canvas.Left="558" Canvas.Top="525" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="146" StatusComponent="534-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="962" Canvas.Top="260" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="130" StatusComponent="534-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1038" Canvas.Top="320" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="256" StatusComponent="526-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="248" Canvas.Top="291" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="527-31-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Width="116" StatusComponent="526-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="591" Canvas.Top="289" HorizontalAlignment="Center" VerticalAlignment="Center" VisibilityComponent="527-31-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Width="100" StatusComponent="526-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="655" Canvas.Top="338" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="527-31-CV1" VisibilitySignal="LS1">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="206" StatusComponent="534-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="726" Canvas.Top="523" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="90" StatusComponent="534-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="882" Canvas.Top="482" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="112" StatusComponent="538-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1047" Canvas.Top="485" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="192" StatusComponent="527-71-ES3" PipeHeight="Medium" Canvas.Left="316" Canvas.Top="247" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="527-31-CV1" VisibilitySignal="LS2"/>
-        <Labels:Pipe Width="80" StatusComponent="528-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="661" Canvas.Top="465" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="109" StatusComponent="527-71-ES3" RenderTransformOrigin="0.5,0.5" Canvas.Left="591" Canvas.Top="297" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="527-31-CV1" VisibilitySignal="LS2"/>
-        <Labels:Pipe Width="92" StatusComponent="527-71-ES3" RenderTransformOrigin="0.5,0.5" Canvas.Left="652" Canvas.Top="342" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="527-31-CV1" VisibilitySignal="LS2">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Machines:DRY_HeatingBattery Height="50" Width="52" Canvas.Left="593" Canvas.Top="503" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_VS_Airlock Canvas.Left="672" Canvas.Top="381" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="523" Canvas.Top="502" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_DV_Diverter Canvas.Left="492" Canvas.Top="239" RenderTransformOrigin="0.5,0.5" Height="70" Width="110" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:V01_DV_Diverter.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1" ScaleY="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:V01_DV_Diverter.RenderTransform>
-        </Machines:V01_DV_Diverter>
-        <Machines:V01_ScarpaTrasporto Canvas.Left="675" Canvas.Top="498" Height="38" Width="58" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_SA_Elutriator Canvas.Left="889" Canvas.Top="253"/>
-        <Machines:V01_VS_Airlock Canvas.Left="1074" Canvas.Top="381" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_Material_Inlet_Outlet Canvas.Left="279" Canvas.Top="217" Height="70" Width="52" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Rectangle Height="50" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="458" Canvas.Top="227" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="429" Canvas.Top="172" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:External.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:External.RenderTransform>
-        </Machines:External>
-        <Rectangle Height="2" Stroke="Black" Width="74" RenderTransformOrigin="0.5,0.5" Canvas.Left="1066" Canvas.Top="503" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1135" Canvas.Top="475" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Machines:External.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Machines:External.RenderTransform>
-        </Machines:External>
-        <Labels:JumpLabel JumpFromLabel="527-31-CV1" JumpToLabel="526-01-MA1" Canvas.Left="177" Canvas.Top="262" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DetailsLabel ComponentName="530-DRY" DetailsPageName="D530" Canvas.Left="560" Canvas.Top="556" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="528-01-MA1" Canvas.Left="742" Canvas.Top="389" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="538-01-MA1" Canvas.Left="1144" Canvas.Top="389" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="527-71-ES3" Canvas.Left="339" Canvas.Top="176" Width="90" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="527-31-CV1" Canvas.Left="555" Canvas.Top="215" Width="90" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="538-71-ES2" Canvas.Left="1058" Canvas.Top="536" Width="90" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    </Canvas>
+  <Canvas>
+    <Labels:Pipe Width="146" StatusComponent="534-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="962" Canvas.Top="277" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_Material_Inlet_Outlet Canvas.Left="948" Canvas.Top="255" Height="54" Width="37" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe StatusComponent="534-01-MA1" RenderTransformOrigin="0.55,0.5" Width="121" Color="Air" Canvas.Left="558" Canvas.Top="525" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="112" StatusComponent="534-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1047" Canvas.Top="329" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="84" StatusComponent="526-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="420" Canvas.Top="291" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="527-31-CV1" VisibilitySignal="LS1"/>
+    <Labels:Pipe Width="116" StatusComponent="526-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="591" Canvas.Top="289" HorizontalAlignment="Center" VerticalAlignment="Center" VisibilityComponent="527-31-CV1" VisibilitySignal="LS1"/>
+    <Labels:Pipe Width="100" StatusComponent="526-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="655" Canvas.Top="338" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="527-31-CV1" VisibilitySignal="LS1">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="206" StatusComponent="534-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="726" Canvas.Top="523" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="90" StatusComponent="534-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="882" Canvas.Top="482" HorizontalAlignment="Center" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="112" StatusComponent="538-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1047" Canvas.Top="485" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="192" StatusComponent="527-71-ES3" PipeHeight="Medium" Canvas.Left="316" Canvas.Top="247" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="527-31-CV1" VisibilitySignal="LS2"/>
+    <Labels:Pipe Width="80" StatusComponent="528-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="661" Canvas.Top="465" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="109" StatusComponent="527-71-ES3" RenderTransformOrigin="0.5,0.5" Canvas.Left="591" Canvas.Top="297" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="527-31-CV1" VisibilitySignal="LS2"/>
+    <Labels:Pipe Width="92" StatusComponent="527-71-ES3" RenderTransformOrigin="0.5,0.5" Canvas.Left="652" Canvas.Top="342" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="527-31-CV1" VisibilitySignal="LS2">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Machines:DRY_HeatingBattery Height="50" Width="52" Canvas.Left="593" Canvas.Top="503" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_VS_Airlock Canvas.Left="672" Canvas.Top="381" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="523" Canvas.Top="502" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_DV_Diverter Canvas.Left="492" Canvas.Top="239" RenderTransformOrigin="0.5,0.5" Height="70" Width="110" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Machines:V01_DV_Diverter.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform ScaleX="-1" ScaleY="-1"/>
+          <SkewTransform/>
+          <RotateTransform/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:V01_DV_Diverter.RenderTransform>
+    </Machines:V01_DV_Diverter>
+    <Machines:V01_ScarpaTrasporto Canvas.Left="675" Canvas.Top="498" Height="38" Width="58" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_SA_Elutriator Canvas.Left="889" Canvas.Top="254" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_VS_Airlock Canvas.Left="1074" Canvas.Top="381" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Machines:V01_Material_Inlet_Outlet Canvas.Left="279" Canvas.Top="217" Height="70" Width="52" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Rectangle Height="50" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="458" Canvas.Top="227" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="429" Canvas.Top="172" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Machines:External.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform ScaleX="-1"/>
+          <SkewTransform/>
+          <RotateTransform/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:External.RenderTransform>
+    </Machines:External>
+    <Rectangle Height="2" Stroke="Black" Width="74" RenderTransformOrigin="0.5,0.5" Canvas.Left="1066" Canvas.Top="503" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1135" Canvas.Top="475" HorizontalAlignment="Left" VerticalAlignment="Top">
+      <Machines:External.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Machines:External.RenderTransform>
+    </Machines:External>
+    <Labels:DetailsLabel ComponentName="530-DRY" DetailsPageName="D530" Canvas.Left="560" Canvas.Top="556" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="528-01-MA1" Canvas.Left="742" Canvas.Top="389" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="538-01-MA1" Canvas.Left="1144" Canvas.Top="389" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="527-71-ES3" Canvas.Left="339" Canvas.Top="176" Width="90" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="527-31-CV1" Canvas.Left="555" Canvas.Top="215" Width="90" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="538-71-ES2" Canvas.Left="1058" Canvas.Top="536" Width="90" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="74" StatusComponent="526-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="354" Canvas.Top="362" VisibilityComponent="527-31-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="80" StatusComponent="526-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="384" Canvas.Top="327" HorizontalAlignment="Left" VerticalAlignment="Top" VisibilityComponent="527-31-CV1" VisibilitySignal="LS1">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:JumpLabel JumpFromLabel="527-31-CV1" JumpToLabel="526-01-MA1" Canvas.Left="272" Canvas.Top="332" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+  </Canvas>
 </UserControl>
