V3001: Modifiche Secondo Rev V del P&ID

--- a/Prevu.Synoptics.V3001-COVERIS/P520.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P520.xaml
@@ -286,7 +286,7 @@
             Margin="899,682,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="526-01-MA1" 
-            JumpToLabel="500-41-LT1"/>
+            JumpToLabel="464-01-MA1"/>
 		<Labels:JumpLabel HorizontalAlignment="Left" 
                       Margin="531,66,0,0" 
                       VerticalAlignment="Top" 
