--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D883_2.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D883_2.xaml
@@ -10,7 +10,7 @@
              d:Background="{DynamicResource MaterialDesignPaper}" >
     <Canvas Height="344" Width="368">
         <Machines:V01_BBF_SingleBag Canvas.Left="10" Canvas.Top="10" Height="320" Width="343" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="883-62-BAG" SignalName="LSH" Canvas.Left="136" Canvas.Top="73"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="883-62-BAG" SignalName="LSHA" Canvas.Left="136" Canvas.Top="73"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="883-62-BAG" SignalName="SEL" Canvas.Left="136" Canvas.Top="234"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="883-62-BAG" Canvas.Left="136" Canvas.Top="154"/>
     </Canvas>
