--- a/Prevu.Synoptics.V4300_Covinil/Details/D820_2.xaml
+++ b/Prevu.Synoptics.V4300_Covinil/Details/D820_2.xaml
@@ -9,11 +9,11 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}"
              x:Class="Prevu.Synoptics.D820_2">
-    <Canvas Height="450" Width="332">
-        <Machines:V01_SLX_Silo_wAgitator Canvas.Left="5" Canvas.Top="2" Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Color="DryMaterial"/>
-        <Labels:SignalLabel ComponentName="820-41-LEV" SignalName="LSHA" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="59" Canvas.Top="35"/>
-        <Labels:SignalLabel ComponentName="820-41-LEV" SignalName="LSH" Canvas.Left="59" Canvas.Top="84" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel ComponentName="820-41-LEV" SignalName="LSLA" Canvas.Left="84" Canvas.Top="278" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="820-41-LEV" Canvas.Left="121" Canvas.Top="158" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    </Canvas>
+  <Canvas Height="450" Width="332">
+    <Machines:V01_SLX_Silo_wAgitator Canvas.Left="5" Canvas.Top="2" Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Color="DryMaterial"/>
+    <Labels:SignalLabel ComponentName="820-41-LEV" SignalName="LSH1" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="59" Canvas.Top="35"/>
+    <Labels:SignalLabel ComponentName="820-41-LEV" SignalName="LSH2" Canvas.Left="151" Canvas.Top="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:SignalLabel ComponentName="820-41-LEV" SignalName="LSL" Canvas.Left="80" Canvas.Top="258" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="820-41-LEV" Canvas.Left="121" Canvas.Top="148" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+  </Canvas>
 </UserControl>
